--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,11 @@
 /* Fondo oscuro cuando el pop-up esté visible dentro del mapa */
 #overlay {
     display: none;
-    position: absolute; /* Posicionamos el overlay relativo al mapa */
+    position: fixed; /* Posicionamos el overlay cubriendo toda la pantalla */
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
-    z-index: 9;
+    z-index: 9; /* Se asegura de estar detrás del pop-up */
 }
